<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">
    
    <TextView
        android:id="@+id/out"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:text="@string/welcome_text"
        android:layout_weight="1.0">
	</TextView>
    
    <LinearLayout
        android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center">
	
		<Button 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/buttonStart" 
	    	android:text="@string/button_start">
		</Button>
	
		<Button 
	   		android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/buttonStop"
	    	android:text="@string/button_stop"> 
		</Button>
		
	</LinearLayout>
	
</LinearLayout>